# claude-code-readline-client

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
ccrc/: claude_client.py  main.py
ccrc/input/: readline_handler.py
ccrc/tests/: test_claude_client.py  test_readline_handler.py
